# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
python_template/: __main__.py  config.py  util.py
python_template/cat_facts/: config.py  controller.py  schema.py  util.py
python_template/cat_facts/service/: impl.py  interface.py  test_impl.py
python_template/exceptions/: definitions.py  requests.py
tests/: cat_facts_test.py
