[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Callum Gundlach <gundlachcallum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pedantic = "^2.1.5"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py312"

[format]
docstring-code-format = true
